@startuml

    !include ../lexakai/lexakai.theme

    title "com.telenav.lexakai.application.associations"

    interface Comparable

    enum UmlAssociation.AssociationType
    {
        AGGREGATION
        COMPOSITION
        RELATION
    }

    Comparable <|-- UmlAssociation
    class UmlAssociation
    {
        --
        +UmlAssociation of(TypeDeclaration<?> referrer, AssociationType, String referent, String from, String to, String label)
        +UmlAssociation of(TypeDeclaration<?> referrer, AssociationType, Type referent, String from, String to, String label)
        +AssociationType type()
        +String uml()
    }

    Comparable <|-- UmlInheritance
    class UmlInheritance
    {
        --(constructors)--
        +UmlInheritance(String, String)
        --
        +String uml()
    }

@enduml

